# greylist-filter

./: AUTHORS  ChangeLog  Makefile  Makefile.am  README  README.md  autogen.sh  configure.ac
conf/: grist.conf
gristool/: gristool.pl
gristool/Grist/: Check.pm  Config.pm  Prune.pm
src/: Makefile.am  config.c  db_sql.c  db_sql.h  grist.conf  grist.h  grist.sqlite  main.c
tests/: test.request
tools/: gendoc.sh  getrev.sh  gristool.8  gristool.pod
